# Process-Framework

./: .gitignore  pyproject.toml
notebooks/: about.ipynb  readme.txt
notebooks/pipeline/: cli.ipynb  pipeline_builder.ipynb
notebooks/references/: reference.ipynb  reference_dataframe_column.ipynb
notebooks/steps/: batch_processor.ipynb  foreach.ipynb  logging.ipynb  steps.ipynb
notebooks/steps/elasticsearch/: dataframe_to_documents.ipynb  document.ipynb  index.ipynb  scan.ipynb  update_by_query.ipynb
notebooks/steps/esri/: get_esri_query_response.ipynb
notebooks/steps/solr/: get_solr_query_result.ipynb
notebooks/steps/sql/: get_sql_query_result.ipynb
notebooks/steps/versioning/: get_document_versions.ipynb
secrets/: readme.txt
src/process/: _about.py  _version.py  cli.py  pipeline.py  settings.py
src/process_framework/: __init__.py  _version.py
src/process_framework/credentials/: elastic_credential.py  pydantic_credential.py  sql_credential.py
src/process_framework/exceptions/: __init__.py  early_escape.py
src/process_framework/pipeline/: __init__.py  cli.py  clients.py  metadata.py  pipeline.py  readme.md  references.py  settings.py
src/process_framework/references/: __init__.py  readme.md  reference.py  reference_dataframe_column.py
src/process_framework/steps/: __init__.py  appending_step.py  assigning_step.py  batch_processing_step.py  foreach.py  logging_step.py  modifying_step.py  readme.md  retry_step.py  step.py  transforming_step.py
src/process_model/: __init__.py
src/process_model/pipeline/: __init__.py
src/process_model/references/: reference.py  reference_dataframe_column.py
src/process_model/steps/: __init__.py  assigning_step.py  modifying_step.py  step.py  (+1 more)
tests/: readme.txt
(+34 files in other folders)
