[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "process_model"
version = '2025.07.04'
authors = [
    {name = "Simon Wilson", email = "simon.wilson@historicengland.org.uk"},
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]