[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "process_model"
version = '2025.07.04'
authors = [
    {name = "Simon Wilson", email = "simon.wilson@historicengland.org.uk"},
]

dependencies = [
    "elasticsearch<9.0",
    "pandas",
    "pydantic",
    "requests"
]

[project.optional-dependencies]
sql=["sqlalchemy", "pyodbc", "pandas"]
elasticsearch=["elasticsearch"]
geo=["geopandas"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]